Lebontroc Dev 15 janv 2019

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -12,7 +12,7 @@
 
 /* Logo */
 .navbar-wagon-brand img {
-  height: 50px;
+  height: 175px;
 }
 
 /* User Avatar */
@@ -41,7 +41,7 @@
   font-size: 14px;
 }
 .navbar-wagon-link:hover {
-  color: #da552f;
+  color: #469AE0;
   text-decoration: none;
 }
 
@@ -53,8 +53,8 @@
 }
 .navbar-wagon-dropdown-menu li > a {
   transition: color 0.3s ease;
-  font-weight: lighter !important;
-  color: #999999 !important;
+  // font-weight: lighter !important;
+  color: #616668 !important;
   font-size: 15px !important;
   line-height: 22px !important;
   padding: 10px 20px;
