--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,35 +1,27 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="container">
+  <h2>Vos informations</h2>
+  <hr>
+  <div class="form-devise">
+        <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+          <%= f.error_notification %>
+          <%= f.input :pseudo, disabled: true, autofocus: true, label: "Pseudo" %>
+          <%= f.input :first_name, disabled: true, autofocus: true, label: "Prénom" %>
+          <%= f.input :last_name, disabled: true, autofocus: true, label: "Nom" %>
+          <%= f.input :email, disabled: true, autofocus: true %>
+          <%= f.input :phone, required: true, autofocus: true, label: "Téléphone", error: 'Vous devez enter un numéro de téléphone.' %>
+          <hr>
+          <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+            <p>En attente de confirmation pour: <%= resource.unconfirmed_email %></p>
+          <% end %>
+          <%= f.input :password, autocomplete: "off", placeholder: "Laisser vide si vous ne souhaitez pas le changer", required: false, label: 'Mot de passe' %>
+          <%= f.input :password_confirmation, required: false, placeholder: "Laisser vide si vous ne souhaitez pas le changer", label: 'Confirmation mot de passe' %>
+          <hr>
+          <%= f.input :current_password, placeholder: "Nous avons besoin de votre mot de passe actuel pour effectuer les changements", required: true, label: 'Mot de passe actuel', error: 'Nous avons besoin de votre mot de passe actuel pour effectuer les changements.' %>
+          <%= f.button :submit, "Mettre à jour", class: "btn btn-success" %>
+        <% end %>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= f.error_notification %>
+        <hr>
 
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
-
-    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-      <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
-    <% end %>
-
-    <%= f.input :password,
-                hint: "leave it blank if you don't want to change it",
-                required: false
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                required: false,
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :current_password,
-                hint: "we need your current password to confirm your changes",
-                required: true,
-                input_html: { autocomplete: "current-password" } %>
+        <%= link_to "Supprimer mon compte", registration_path(resource_name), class: "btn btn-danger", data: { confirm: "Are you sure?" }, method: :delete %>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Update" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+</div>
