--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,25 +1,46 @@
-<h2>Sign up</h2>
+<div class="container">
+  <div class="row">
+    <div class="col-4"></div>
+    <div class="col-4">
+      <div class="form-devise">
+        <h2>S'enregistrer</h2>
+        <hr>
+        <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+          <%= f.error_notification %>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= f.error_notification %>
+          <div class="form-inputs">
+            <%= f.input :pseudo, label: 'Pseudo', required: true, autofocus: true, error: 'Vous devez entrer un pseudo.' %>
+            <%= f.input :first_name, label: 'Prénom', required: true, autofocus: true, error: 'Vous devez entrer un prénom.' %>
+            <%= f.input :last_name, label: 'Nom', required: true, autofocus: true, error: 'Vous devez entrer un nom.' %>
+            <%= f.input :email, label: 'Email', required: true, autofocus: true, error: 'Vous devez entrer un email.' %>
+            <%= f.input :phone, label: 'Téléphone', required: true, autofocus: true, error: 'Vous devez entrer un numéro de téléphone.' %>
+            <%= f.input :password, label: 'Créer un mot de passe', required: true, hint: ("#{@minimum_password_length} charactères minimum" if @minimum_password_length), error: 'Vous devez entrer un mot de passe.' %>
+            <%= f.input :password_confirmation, label: 'Confirmez le mot passe', required: true, error: 'Vous devez confirmer votre mot de passe.' %>
+          </div>
+<!--           <div class="form-row">
+            <label for="card-element">
+              Carte Bancaire (sécurisé)
+            </label>
+            <div id="card-element">
 
-  <div class="form-inputs">
-    <%= f.input :email,
-                required: true,
-                autofocus: true ,
-                input_html: { autocomplete: "email" }%>
-    <%= f.input :password,
-                required: true,
-                hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                required: true,
-                input_html: { autocomplete: "new-password" } %>
+            </div>
+
+            <div id="card-errors" role="alert"></div>
+          </div> -->
+          <div class="form-actions">
+            <%= f.button :submit, "S'enregistrer", class: "btn btn-success"%>
+          </div>
+        <% end %>
+      <%= render "devise/shared/links" %>
+      </div>
+    </div>
+    <div class="col-4"></div>
   </div>
+</div>
+<script src="https://js.stripe.com/v3/"></script>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
-  </div>
+<% content_for(:after_js) do %>
+  <script>
+    initSubmission("<%= ENV['publishable_key']%>");
+  </script>
 <% end %>
-
-<%= render "devise/shared/links" %>
