--- a/app/views/admin/annonces/index.html.erb
+++ b/app/views/admin/annonces/index.html.erb
@@ -18,7 +18,7 @@
         <img src="<%= annonce.photo %>" alt="img" class="product-image hidden-xs">
         <div class='product-body'>
           <h3><%= annonce.titre %> contre <%= annonce.contre %></h3>
-          <p><%= annonce.description.first(26) %></p>
+          <p><%= annonce.description.first(20) %>...</p>
           <br />
           <p><a>Status: <%= @status_list[annonce.status] %></a></p>
         </div>
@@ -41,7 +41,7 @@
         <img src="<%= annonce.photo %>" alt="img" class="product-image hidden-xs">
         <div class='product-body'>
           <h3><%= annonce.titre %> contre <%= annonce.contre %></h3>
-          <p><%= annonce.description.first(26) %></p>
+          <p><%= annonce.description.first(20) %>...</p>
           <br />
           <p><a>Status: <%= @status_list[annonce.status] %></a></p>
         </div>
@@ -63,7 +63,7 @@
         <img src="<%= annonce.photo %>" alt="img" class="product-image hidden-xs">
         <div class='product-body'>
           <h3><%= annonce.titre %> contre <%= annonce.contre %></h3>
-          <p><%= annonce.description.first(26) %></p>
+          <p><%= annonce.description.first(20) %>...</p>
           <br />
           <p><a>Status: <%= @status_list[annonce.status] %></a></p>
         </div>
@@ -85,7 +85,7 @@
         <img src="<%= annonce.photo %>" alt="img" class="product-image hidden-xs">
         <div class='product-body'>
           <h3><%= annonce.titre %> contre <%= annonce.contre %></h3>
-          <p><%= annonce.description.first(26) %></p>
+          <p><%= annonce.description.first(20) %>...</p>
           <br />
           <p><a>Status: <%= @status_list[annonce.status] %></a></p>
         </div>
@@ -122,7 +122,7 @@
               <img src="<%= annonce.photo %>" alt="img" class="product-image hidden-xs">
               <div class='product-body'>
                 <h3><%= annonce.titre %> contre <%= annonce.contre %></h3>
-                <p><%= annonce.description.first(26) %></p>
+                <p><%= annonce.description.first(20) %>...</p>
                 <br />
                 <p><a>Status: <%= @status_list[annonce.status] %></a></p>
               </div>
@@ -145,7 +145,7 @@
               <img src="<%= annonce.photo %>" alt="img" class="product-image hidden-xs">
               <div class='product-body'>
                 <h3><%= annonce.titre %> contre <%= annonce.contre %></h3>
-                <p><%= annonce.description.first(26) %></p>
+                <p><%= annonce.description.first(20) %>...</p>
                 <br />
                 <p><a>Status: <%= @status_list[annonce.status] %></a></p>
               </div>
@@ -167,7 +167,7 @@
               <img src="<%= annonce.photo %>" alt="img" class="product-image hidden-xs">
               <div class='product-body'>
                 <h3><%= annonce.titre %> contre <%= annonce.contre %></h3>
-                <p><%= annonce.description.first(26) %></p>
+                <p><%= annonce.description.first(20) %>...</p>
                 <br />
                 <p><a>Status: <%= @status_list[annonce.status] %></a></p>
               </div>
