--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -1,4 +1,3 @@
-// This is where you override default Bootstrap variables
 // 1. All Bootstrap variables are here => https://github.com/twbs/bootstrap-sass/blob/master/assets/stylesheets/bootstrap/_variables.scss
 // 2. These variables are defined with default value (see https://robots.thoughtbot.com/sass-default)
 // 3. You can override them below!
@@ -16,6 +15,7 @@ $brand-success:   $green;
 $brand-info:      $yellow;
 $brand-danger:    $red;
 $brand-warning:   $orange;
+$main-text-color: rgb(72, 72, 72) !important;
 
 // Buttons & inputs' radius
 $border-radius-base:  2px;
