--- a/app/views/annonces/new.html.erb
+++ b/app/views/annonces/new.html.erb
@@ -1,38 +1,44 @@
 <div class="container">
-  <h1>Déposer une annonce</h1>
+  <h3>Déposer une annonce</h3>
   <hr>
-  <%= simple_form_for @annonce do |f| %>
-  <%= f.error_notification %>
-    <div class="form-group">
-      <%= f.label :titre, 'Que voulez vous échanger ?' %>
-      <%= f.text_field :titre, class: "form-control", placeholder: 'Exemple: Iphone 7', required: true, error: 'Vous devez renseigner un titre.'  %>
-    </div>
-    <div class="form-group">
-      <%= f.label :description, 'Description de votre produit' %>
-      <%= f.text_area :description, class: "form-control", placeholder: 'Exemple: Bon état, quelque rayures..', required: true, error: 'Vous devez renseigner une description.' %>
-    </div>
-    <div class="form-group">
-      <%= f.label :raison, 'Pourquoi voulez vous échanger ce produit ?' %>
-      <%= f.text_area :raison, class: "form-control", placeholder: 'Exemple: Je n\'utilise plus ce téléphone..', required: true, error: 'Vous devez renseigner une raison.' %>
-    </div>
-    <div class="form-group">
-      <%= f.label :contre, 'Que désirez vous en échange ?' %>
-      <%= f.text_field :contre, class: "form-control", placeholder: 'Exemple: Samsung S8', required: true, error: 'Vous devez renseigner l\'objet que vous désirez en échange.' %>
-    </div>
-    <hr>
-    <div class="form-group">
-      <%= f.label :photo, 'Choissisez une photo de votre produit depuis votre ordinateur: (175x130)', required: true, error: 'Vous devez mettre une photo de votre produit.' %>
-      <%= f.input :photo, label: false %>
-      <%= f.input :photo_cache, as: :hidden %>
-    </div>
-    <hr>
-    <div class="form-group">
-        <%= f.input :autrepropositions, class: "form-control", label: 'Laisser les utilisateur vous proposez d\'autres objets en échange ?', :as => :boolean %>
-    </div>
-    <hr>
-    <%= f.submit "Créer votre annonce", class: "btn btn-primary" %>
-<!--     <div style="padding-top:10px;">
-      <p><i class="fa fa-history"></i> <%= link_to "Retour aux annonces",  annonces_path %></p>
-    </div> -->
-  <% end %>
+  <div class="form-standard">
+    <%= simple_form_for @annonce do |f| %>
+    <%= f.error_notification %>
+      <div class="form-group">
+        <%= f.label :titre, 'Que voulez vous échanger ?' %>
+        <%= f.text_field :titre, class: "form-control", placeholder: 'Exemple: Iphone 7', required: true, error: 'Vous devez renseigner un titre.'  %>
+      </div>
+      <div class="form-group">
+        <%= f.label :description, 'Description de votre produit' %>
+        <%= f.text_area :description, class: "form-control", placeholder: 'Exemple: Bon état, quelque rayures..', required: true, error: 'Vous devez renseigner une description.' %>
+      </div>
+      <div class="form-group">
+        <%= f.label :raison, 'Pourquoi voulez vous échanger ce produit ?' %>
+        <%= f.text_area :raison, class: "form-control", placeholder: 'Exemple: Je n\'utilise plus ce téléphone..', required: true, error: 'Vous devez renseigner une raison.' %>
+      </div>
+      <div class="form-group">
+        <%= f.label :contre, 'Que désirez vous en échange ?' %>
+        <%= f.text_field :contre, class: "form-control", placeholder: 'Exemple: Samsung S8', required: true, error: 'Vous devez renseigner l\'objet que vous désirez en échange.' %>
+      </div>
+      <hr>
+      <div class="form-group">
+        <%= f.label :photo, 'Choissisez une photo de votre produit depuis votre ordinateur: (175x130)', required: true, error: 'Vous devez mettre une photo de votre produit.' %>
+        <%= f.input :photo, label: false %>
+        <%= f.input :photo_cache, as: :hidden %>
+      </div>
+      <hr>
+      <div class="form-group">
+          <%= f.input :autrepropositions, class: "form-control", label: 'Laisser les utilisateur vous proposez d\'autres objets en échange ?', :as => :boolean %>
+      </div>
+      <hr>
+      <div class="form-group">
+        <p>Choisissez votre mode d'échange:</p>
+        <p><%= f.radio_button :typeechange, '0' %> Seulement remise en main propre</p>
+        <p><%= f.radio_button :typeechange, '1' %> Seulement par voie postal</p>
+        <p><%= f.radio_button :typeechange, '2' %> Les deux</p>
+      </div>
+      <hr>
+      <%= f.submit "Créer votre annonce", class: "btn btn-primary" %>
+    <% end %>
+  </div>
 </div>
