--- a/app/views/annonces/show.html.erb
+++ b/app/views/annonces/show.html.erb
@@ -1,27 +1,114 @@
 <div class="container">
-  <h1><%= @annonce.titre %> contre <%= @annonce.contre %></h1>
+  <h3><%= @annonce.titre %> contre <%= @annonce.contre %></h3>
   <hr>
-    <div class="product">
-      <div class='product-upvote'>
-      </div>
-      <img src="<%= @annonce.photo %>" alt="kudoz" class="product-image d-none d-sm-block">
-      <div class='product-body'>
-        <p>Posté par <%= @annonce.user.pseudo %>.</p>
-      </div>
-<!--       <ul class="list-inline product-controls product-controls-hidden d-none d-sm-block">
-        <% if @annonce.autrepropositions %>
-        <li><%= link_to "Proposer un autre objet en échange", annonces_path, class: 'btn btn-primary', style: 'color: white; font-size: 18px;' %></li>
-        <% end %>
-        <li><%= link_to "Contacter la personne", annonces_path, class: 'btn btn-primary', style: 'color: white; font-size: 18px;' %></li>
-      </ul> -->
+  <div class="product">
+    <div class='product-upvote'>
     </div>
-    <hr>
-    <h1>Description</h1>
-    <p> - <%= @annonce.description %></p>
-    <hr>
-    <h1>Raison(s)</h1>
-    <p> - <%= @annonce.raison %></p>
-    <hr>
-    <%= link_to "Proposer un autre objet en échange", annonces_path, class: 'btn btn-primary' %>
-    <%= link_to "Contacter la personne", annonces_path, class: 'btn btn-primary' %>
+    <img src="<%= @annonce.photo %>" alt="kudoz" class="product-image d-none d-sm-block">
+    <div class='product-body'>
+      <p>Posté par <%= @annonce.user.pseudo %>.</p>
+    </div>
+  </div>
+  <hr>
+  <h3>Description</h3>
+  <p> - <%= @annonce.description %></p>
+  <hr>
+  <h3>Raison(s)</h3>
+  <p> - <%= @annonce.raison %></p>
+  <hr>
+  <h3>Mode(s) d'échange choisis par <%= @annonce.user.pseudo %> </h3>
+  <p> - <%= @typeechange_list[@annonce.typeechange] %></p>
+  <hr>
+  <% if @annonce.autrepropositions %>
+      <% if user_signed_in? %>
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#propose-modal-logged-in"> Proposer un autre objet</button>
+      <% else %>
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#propose-modal-logged-out"> Proposer un autre objet</button>
+    <% end %>
+  <% end %>
+  <% if user_signed_in? %>
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#contact-modal-logged-in"> Contacter la personne</button>
+  <% else %>
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#contact-modal-logged-out"> Contacter la personne</button>
+  <% end %>
+
+<!-- modal propose -->
+  <div class="modal fade" id="propose-modal-logged-in" tabindex="-1" role="dialog" aria-labelledby="propose-modal-logged-in" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="propose-modal-logged-in-title">Proposer un autre objet à <%= @annonce.user.pseudo %></h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+<!--      form send other objets -->
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal fade" id="propose-modal-logged-out" tabindex="-1" role="dialog" aria-labelledby="propose-modal-logged-out" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="propose-modal-title">Proposer un autre objet à <%= @annonce.user.pseudo %></h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <p><i class="fa fa-times" style="color:red;"></i> Vous devez etre connecté pour pouvoir proposer un autre objet.</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+<!-- contact modal -->
+  <div class="modal fade" id="contact-modal-logged-in" tabindex="-1" role="dialog" aria-labelledby="contact-modal-logged-in" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="contact-modal-logged-in-title">Coordonnées de <%= @annonce.user.pseudo %></h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <p><i class="fa fa-phone" style="color:#32B796;"></i> Téléphone: <%= @annonce.user.phone %></p>
+          <p><i class="fa fa-envelope" style="color:#32B796;"></i> Email: <%= @annonce.user.email %></p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal fade" id="contact-modal-logged-out" tabindex="-1" role="dialog" aria-labelledby="contact-modal-logged-out" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="contact-modal-title">Coordonnées de <%= @annonce.user.pseudo %> </h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <p><i class="fa fa-times" style="color:red;"></i> Vous devez etre connecté pour acceder à ces informations.</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
 </div>
