--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <h2>Vos informations</h2>
   <hr>
-  <div class="form-devise">
+  <div class="form-standard">
         <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
           <%= f.error_notification %>
           <%= f.input :pseudo, disabled: true, autofocus: true, label: "Pseudo" %>
@@ -22,6 +22,6 @@
 
         <hr>
 
-        <%= link_to "Supprimer mon compte", registration_path(resource_name), class: "btn btn-danger", data: { confirm: "Are you sure?" }, method: :delete %>
+        <%= link_to "Supprimer mon compte", registration_path(resource_name), class: "btn btn-danger", data: { confirm: "Etes vous sur de vouloir supprimer votre compte ?" }, method: :delete %>
   </div>
 </div>
