--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-4"></div>
     <div class="col-4">
-      <div class="form-devise">
+      <div class="form-standard">
         <h2>S'enregistrer</h2>
         <hr>
         <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
@@ -14,6 +14,7 @@
             <%= f.input :last_name, label: 'Nom', required: true, autofocus: true, error: 'Vous devez entrer un nom.' %>
             <%= f.input :email, label: 'Email', required: true, autofocus: true, error: 'Vous devez entrer un email.' %>
             <%= f.input :phone, label: 'Téléphone', required: true, autofocus: true, error: 'Vous devez entrer un numéro de téléphone.' %>
+            <hr>
             <%= f.input :password, label: 'Créer un mot de passe', required: true, hint: ("#{@minimum_password_length} charactères minimum" if @minimum_password_length), error: 'Vous devez entrer un mot de passe.' %>
             <%= f.input :password_confirmation, label: 'Confirmez le mot passe', required: true, error: 'Vous devez confirmer votre mot de passe.' %>
           </div>
