--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="content-home">
-  <div class="banner" style="background-image: url('/assets/banner-home.jpg');">
+  <div class="banner" style="background-image: asset-data-url('banner-home.jpg');">
     <div class="banner-content">
 <!-- <h3><span id="home-search-text"></span></h3> -->
       <div class="container">
