--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -11,6 +11,7 @@
   text-align: left;
   height: calc(70vh - 70px);
   background-size: cover !important;
+  background-image: asset-data-url('banner-home.jpg');
   display: flex;
   align-items: center;
   justify-content: left;
