devise log in register btn fa user

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h2>Vos informations</h2>
+  <h2><i class="fa fa-user"></i> Vos informations</h2>
   <hr>
   <div class="form-standard">
         <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
