--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,7 +3,7 @@
     <div class="col-4"></div>
     <div class="col-4">
       <div class="form-standard">
-        <h2>S'enregistrer</h2>
+        <h2><i class="fa fa-user"></i> S'enregistrer</h2>
         <hr>
         <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
           <%= f.error_notification %>
@@ -29,7 +29,7 @@
             <div id="card-errors" role="alert"></div>
           </div> -->
           <div class="form-actions">
-            <%= f.button :submit, "S'enregistrer", class: "btn btn-success"%>
+            <%= f.button :submit, "S'enregistrer", class: "btn btn-success", style: "width:100%; margin-bottom:15px;"%>
           </div>
         <% end %>
       <%= render "devise/shared/links" %>
