--- a/app/assets/stylesheets/components/_show.scss
+++ b/app/assets/stylesheets/components/_show.scss
@@ -1,21 +1,14 @@
-.banner-show {
-  color: white;
-  text-align: center;
-  height: calc(100vh - 70px);
-  background-size: cover !important;
+.flex-show {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: left;
 }
-.banner_show h1 {
-  font-size: 30px;
-  font-weight: bold;
-  text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
-}
-.banner-show p {
-  font-size: 25px;
-  font-weight: normal;
-  color: rgb(255, 255, 255);
-  opacity: 0.6;
-  margin-bottom: 30px;
+
+.button-img-modal {
+    background-color: Transparent;
+    background-repeat:no-repeat;
+    border: none;
+    cursor:pointer;
+    overflow: hidden;
+    outline:none;
 }
