--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -70,10 +70,10 @@ form p {
 
 .flex-cards-home {
   display: flex;
-  align-items: left;
+  align-items: center;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: left;
+  justify-content: center;
 }
 
 .flex-cards-description-home {
