--- a/app/assets/stylesheets/layouts/_forms.scss
+++ b/app/assets/stylesheets/layouts/_forms.scss
@@ -13,12 +13,11 @@
 }
 
 .form-search {
-  height: 557px;
-  width: 508px;
+  height: 85%;
+  width: 50%;
   background:rgb(255, 255, 255) none repeat scroll 0% 0%;
   border-radius: 4px;
   padding: 32px;
-  margin-top:20px;
   transition: all 0.5s ease-in-out;
 }
 
