--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,27 +1,26 @@
-<div class="navbar-wagon">
+<div class="navbar-lebontroc fixed-top">
   <!-- Logo -->
-  <%= link_to root_path, class: "navbar-wagon-brand" do %>
+  <%= link_to root_path, class: "navbar-lebontroc-brand" do %>
     <%= image_tag "logo.png", height: 175 %>
   <% end %>
 
   <!-- Right Navigation -->
-  <div class="navbar-wagon-right d-none d-sm-none d-md-none d-lg-block">
-
+  <div class="navbar-lebontroc-right d-none d-md-block">
+    <%= link_to '<i class="far fa-newspaper"></i> Annonces'.html_safe, annonces_path, class: "navbar-lebontroc-item navbar-lebontroc-link" %>
     <% if user_signed_in? %>
 
       <!-- Links when logged in -->
-      <%= link_to '<i class="far fa-newspaper"></i> Annonces'.html_safe, annonces_path, class: "navbar-wagon-item navbar-wagon-link" %>
-      <%= link_to '<i class="fa fa-plus"></i> Déposer une annonce'.html_safe, new_annonce_path, class: "navbar-wagon-item navbar-wagon-link" %>
-      <%= link_to '<i class="fa fa-list"></i> Mes annonces'.html_safe, vos_annonces_path, class: "navbar-wagon-item navbar-wagon-link" %>
+      <%= link_to '<i class="fa fa-plus"></i> Déposer une annonce'.html_safe, new_annonce_path, class: "navbar-lebontroc-item navbar-lebontroc-link" %>
+      <%= link_to '<i class="fa fa-list"></i> Mes annonces'.html_safe, vos_annonces_path, class: "navbar-lebontroc-item navbar-lebontroc-link" %>
       <% if current_user.admin == true %>
-       <%= link_to '<i class="fas fa-columns"></i> Panel administrateur'.html_safe, admin_annonces_path, class: "navbar-wagon-item navbar-wagon-link" %>
+       <%= link_to '<i class="fas fa-columns"></i> Panel administrateur'.html_safe, admin_annonces_path, class: "navbar-lebontroc-item navbar-lebontroc-link" %>
       <% end %>
 
       <!-- Avatar with dropdown menu -->
-      <div class="navbar-wagon-item">
+      <div class="navbar-lebontroc-item">
         <div class="dropdown">
-          <%= link_to '<i class="fa fa-user"></i>'.html_safe, "#", class: "avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown" %>
-          <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
+          <%= link_to '<i class="fa fa-user"></i>'.html_safe, "#", class: "avatar dropdown-toggle", id: "navbar-lebontroc-menu", "data-toggle" => "dropdown" %>
+          <ul class="dropdown-menu dropdown-menu-right navbar-lebontroc-dropdown-menu">
             <li>
               <%= link_to edit_user_registration_path do %>
                 <i class="fa fa-cog"></i> <%= t(".profile", default: "Profile") %>
@@ -37,22 +36,46 @@
       </div>
     <% else %>
       <!-- Login link (when logged out) -->
-      <%= link_to '<i class="fa fa-list-alt"></i> Annonces'.html_safe, annonces_path, class: "navbar-wagon-item navbar-wagon-link" %>
-      <%= link_to t(".sign_in", default: "Connexion"), new_user_session_path, class: "navbar-wagon-item navbar-wagon-link btn btn-primary", style: 'color:white;' %>
-      <%= link_to "Inscription", new_user_registration_path, class: "navbar-wagon-item navbar-wagon-link btn btn-primary", style: 'color:white;margin-left:10px;' %>
+      <%= link_to t(".sign_in", default: "Connexion"), new_user_session_path, class: "navbar-lebontroc-item navbar-lebontroc-link btn btn-primary", style: 'color:white;' %>
+      <%= link_to "Inscription", new_user_registration_path, class: "navbar-lebontroc-item navbar-lebontroc-link btn btn-primary", style: 'color:white;margin-left:10px;' %>
     <% end %>
   </div>
 
   <!-- Dropdown list appearing on mobile only -->
-  <div class="navbar-wagon-item d-block d-lg-none">
-    <div class="dropdown">
+
+  <div class="navbar-lebontroc-item d-block d-md-none">
+    <div class="dropdown flex-nav-mobile">
       <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
-      <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-        <li><a href="#">Some mobile link</a></li>
-        <li><a href="#">Other one</a></li>
-        <li><a href="#">Other one</a></li>
+      <ul class="dropdown-menu dropdown-menu-right navbar-lebontroc-dropdown-menu">
+        <li><%= link_to '<i class="far fa-newspaper"></i> Annonces'.html_safe, annonces_path, class: "navbar-lebontroc-item navbar-lebontroc-link" %></li>
+        <% if user_signed_in? %>
+          <li><%= link_to '<i class="fa fa-plus"></i> Déposer une annonce'.html_safe, new_annonce_path, class: "navbar-lebontroc-item navbar-lebontroc-link" %></li>
+          <li><%= link_to '<i class="fa fa-list"></i> Mes annonces'.html_safe, vos_annonces_path, class: "navbar-lebontroc-item navbar-lebontroc-link" %></li>
+          <% if current_user.admin == true %>
+           <li><%= link_to '<i class="fas fa-columns"></i> Panel administrateur'.html_safe, admin_annonces_path, class: "navbar-lebontroc-item navbar-lebontroc-link" %></li>
+          <% end %>
+          <li>
+            <%= link_to edit_user_registration_path do %>
+              <i class="fa fa-cog"></i> <%= t(".profile", default: "Profile") %>
+            <% end %>
+          </li>
+          <li>
+            <%= link_to destroy_user_session_path, method: :delete do %>
+              <i class="fa fa-sign-out-alt"></i> <%= t(".sign_out", default: "Log out") %>
+            <% end %>
+          </li>
+        <% else %>
+          <li><%= link_to new_user_session_path, class: "navbar-lebontroc-item navbar-lebontroc-link", style: 'color:white;' do %>
+            <i class="fa fa-sign-in-alt"></i> <%= t(".sign_in", default: "Connexion") %>
+            <% end %>
+          </li>
+<!--           <li><i class="fa fa-pencil-alt"></i><%= link_to "Inscription", new_user_registration_path, class: "navbar-lebontroc-item navbar-lebontroc-link", style: 'color:white;' %></li> -->
+          <li><%= link_to new_user_registration_path, class: "navbar-lebontroc-item navbar-lebontroc-link", style: 'color:white;' do %>
+            <i class="fa fa-pencil-alt"></i> Inscription
+            <% end %>
+          </li>
+        <% end %>
       </ul>
     </div>
   </div>
 </div>
-
